# AdventOfCode

./: .gitignore  README  README.md
2015/Day_1/: main.go
2015/day_1/: main  main.c
2015/day_12/: test.txt
2015/day_13_hs/: adventOfCode.cabal
2015/day_15_hs/: adventOfCode.cabal
2015/day_16/: Cargo.toml  test.txt
2015/day_19_hs/: adventOfCode.cabal
2015/day_21_hs/: README.md  adventOfCode.cabal  out.txt  tags
2015/day_22_hs/: adventOfCode.cabal
2015/day_23_hs/: adventOfCode.cabal
2015/day_24_hs/: out.txt
2015/day_4_hs/: adventOfCode.cabal
2015/day_5/: Cargo.toml  test.txt
2015/day_7/: Cargo.toml
2015/day_7_c/: Makefile  a.out  array_map.c  main.c  main1.c  myString.c  string.c
2015/day_7_hs/: adventOfCode.cabal  tags
2015/day_8_hs/: test.txt
2015/day_9_hs/: adventOfCode.cabal
2016/day_10_hs/: adventOfCode.cabal
2016/day_11_hs/: adventOfCode.cabal
2016/day_12_hs/: adventOfCode.cabal
2016/day_13_hs/: adventOfCode.cabal  p1.txt  p1v2.txt
2016/day_14_hs/: adventOfCode.cabal
2016/day_16_hs/: adventOfCode.cabal
2016/day_17_hs/: adventOfCode.cabal
2016/day_18_hs/: adventOfCode.cabal
2016/day_22_hs/: adventOfCode.cabal
2016/day_4_hs/: adventOfCode.cabal  test.txt
2016/day_5_hs/: adventOfCode.cabal
2016/day_7_hs/: out.txt
2016/day_8_hs/: adventOfCode.cabal
2016/day_9_hs/: adventOfCode.cabal  (+1 more)
2024/day18-hs/: day18-hs.cabal  stack.yaml
2024/day18-hs/src/: Main.hs
c/: helpers.c  helpers.h
c-template/: Makefile  main.c
go_template/: main.go
hs_template/: adventOfCode.cabal  main.hs
rust_template/: .gitignore
(+221 files in other folders)
